WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146699
Crash when parent iframe is set to display none and the child frame is mutated the same time.
https://bugs.webkit.org/show_bug.cgi?id=146699
Summary
Crash when parent iframe is set to display none and the child frame is mutate...
alan
Reported
2015-07-07 16:17:30 PDT
rdar://problem/16207881
Attachments
Patch
(6.29 KB, patch)
2015-07-07 16:28 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.36 KB, patch)
2015-07-07 16:29 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2015-07-07 16:28:11 PDT
Created
attachment 256330
[details]
Patch
alan
Comment 2
2015-07-07 16:29:32 PDT
Created
attachment 256331
[details]
Patch
Andreas Kling
Comment 3
2015-07-07 16:30:24 PDT
Comment on
attachment 256331
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2015-07-07 18:54:47 PDT
Comment on
attachment 256331
[details]
Patch Clearing flags on attachment: 256331 Committed
r186486
: <
http://trac.webkit.org/changeset/186486
>
WebKit Commit Bot
Comment 5
2015-07-07 18:54:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug